# cmake-project-template

./: CMakeLists.txt
test/: CMakeLists.txt
test/cmake/: gtest.cmake
